Jvadocs and cycle fix